fix 404 error for desktop

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body{
     font-family: arial, serif;
     color: #333;
-    background: url("../images/mobile_bg.jpg") no-repeat;
+    background: url("../images/form_bg.jpg") no-repeat;
     background-size: cover;
 }
 h1{
